# FixFanbox

./: .gitignore  README.md  pyproject.toml  requirements.txt  vercel.json
src/: env.py
src/api/: fanbox.py  httpxrequest.py  kemono.py  models.py  render.py
src/core/: web_app.py
src/route/: article.py  base.py
src/templates/: article.jinja2
tests/: test_fanbox_api.py
